--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="low_gray">#66BDBDBD</color>
+    <color name="primary_text">#474747</color>
+    <color name="secondary_text">#8e8b8b</color>
+
 </resources>
