--- a/app/src/main/res/layout/activity_jeddah.xml
+++ b/app/src/main/res/layout/activity_jeddah.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".JeddahActivity">
+    tools:context=".Activities.JeddahActivity">
 
 </android.support.constraint.ConstraintLayout>
