--- a/app/src/main/res/layout/activity_city.xml
+++ b/app/src/main/res/layout/activity_city.xml
@@ -2,12 +2,29 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:orientation="vertical">
 
     <include
         android:id="@+id/progress_layout"
-        layout="@layout/progressbar" />
+        layout="@layout/progressbar"
+        android:visibility="gone" />
+
+    <Button
+        android:id="@+id/organization_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:layout_margin="@dimen/margin_padding_size_small"
+        android:text="@string/organization" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin_padding_size_small"
+        android:text="@string/courses"
+        android:textColor="@color/primary_text"
+        android:textSize="@dimen/text_size_large"
+        android:textStyle="bold" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/city_activity_recycler_view"
@@ -17,9 +34,10 @@
 
     <TextView
         android:id="@+id/city_activity_empty_recycler"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_margin="@dimen/margin_padding_size_small"
+        android:gravity="center"
         android:text="@string/no_coerces"
         android:textColor="@color/secondary_text"
         android:textSize="@dimen/text_size_small"
