--- a/app/src/main/res/layout/activity_name_course.xml
+++ b/app/src/main/res/layout/activity_name_course.xml
@@ -6,8 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".Activities.NameCourse">
 
-    <com.google.android.gms.maps.MapView
+    <fragment
         android:id="@+id/mapView2"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="340dp"
         android:layout_height="175dp"
         android:layout_marginBottom="8dp"
@@ -41,7 +42,7 @@
         app:layout_constraintVertical_bias="0.551" />
 
     <EditText
-        android:id="@+id/editText9"
+        android:id="@+id/price_editText9"
         android:layout_width="250dp"
         android:layout_height="38dp"
         android:layout_marginBottom="8dp"
@@ -81,7 +82,7 @@
         app:layout_constraintVertical_bias="0.474" />
 
     <EditText
-        android:id="@+id/editText8"
+        android:id="@+id/time_editText8"
         android:layout_width="254dp"
         android:layout_height="35dp"
         android:layout_marginBottom="8dp"
@@ -121,7 +122,7 @@
         app:layout_constraintVertical_bias="0.371" />
 
     <EditText
-        android:id="@+id/editText7"
+        android:id="@+id/date_editText7"
         android:layout_width="271dp"
         android:layout_height="35dp"
         android:layout_marginBottom="8dp"
@@ -161,7 +162,7 @@
         app:layout_constraintVertical_bias="0.278" />
 
     <EditText
-        android:id="@+id/editText6"
+        android:id="@+id/desc_editText6"
         android:layout_width="335dp"
         android:layout_height="59dp"
         android:layout_marginBottom="8dp"
@@ -201,7 +202,7 @@
         app:layout_constraintVertical_bias="0.094" />
 
     <TextView
-        android:id="@+id/textView10"
+        android:id="@+id/title_textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
