--- a/app/src/main/res/layout/activity_organization.xml
+++ b/app/src/main/res/layout/activity_organization.xml
@@ -122,7 +122,7 @@
         app:layout_constraintVertical_bias="0.016" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/confirm_button2"
         android:layout_width="89dp"
         android:layout_height="40dp"
         android:layout_marginBottom="8dp"
@@ -161,7 +161,7 @@
         app:layout_constraintVertical_bias="0.096" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/title_editText"
         android:layout_width="256dp"
         android:layout_height="40dp"
         android:layout_marginBottom="8dp"
@@ -172,7 +172,6 @@
         android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -182,7 +181,7 @@
         app:layout_constraintVertical_bias="0.072" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/desc_editText2"
         android:layout_width="336dp"
         android:layout_height="32dp"
         android:layout_marginBottom="8dp"
@@ -202,7 +201,7 @@
         app:layout_constraintVertical_bias="0.221" />
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/date_editText3"
         android:layout_width="254dp"
         android:layout_height="31dp"
         android:layout_marginBottom="8dp"
@@ -222,7 +221,7 @@
         app:layout_constraintVertical_bias="0.29" />
 
     <EditText
-        android:id="@+id/editText4"
+        android:id="@+id/time_editText4"
         android:layout_width="254dp"
         android:layout_height="35dp"
         android:layout_marginBottom="8dp"
@@ -242,7 +241,7 @@
         app:layout_constraintVertical_bias="0.38" />
 
     <EditText
-        android:id="@+id/editText5"
+        android:id="@+id/price_editText5"
         android:layout_width="250dp"
         android:layout_height="38dp"
         android:layout_marginBottom="8dp"
@@ -261,8 +260,9 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.483" />
 
-    <com.google.android.gms.maps.MapView
-        android:id="@+id/mapView"
+    <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="338dp"
         android:layout_height="146dp"
         android:layout_marginBottom="8dp"
