--- a/app/src/main/res/layout/activity_name_course.xml
+++ b/app/src/main/res/layout/activity_name_course.xml
@@ -41,7 +41,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.551" />
 
-    <EditText
+    <TextView
         android:id="@+id/price_editText9"
         android:layout_width="250dp"
         android:layout_height="38dp"
@@ -81,7 +81,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.474" />
 
-    <EditText
+    <TextView
         android:id="@+id/time_editText8"
         android:layout_width="254dp"
         android:layout_height="35dp"
@@ -121,7 +121,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.371" />
 
-    <EditText
+    <TextView
         android:id="@+id/date_editText7"
         android:layout_width="271dp"
         android:layout_height="35dp"
@@ -161,7 +161,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.278" />
 
-    <EditText
+    <TextView
         android:id="@+id/desc_editText6"
         android:layout_width="335dp"
         android:layout_height="59dp"
